--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "expo-device": "^7.1.4",
+    "expo-notifications": "^0.31.4",
+    "expo-sqlite": "^15.2.14",
     "jest": "^29.7.0",
     "jest-expo": "^53.0.9",
     "typescript": "~5.8.3"
